--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,3 +87,6 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
 check_untyped_defs = true
+explicit_package_bases = true
+mypy_path = "src"
+namespace_packages = true
