--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ mistralai>=1.0.0
 python-dotenv>=1.0.1
 pyright>=1.1.350
 ecologits>=0.8.2
+langchain>=1.0.5
+langchain-openai>=1.0.2
+langchain-mistralai>=1.0.1
