feat: [generated with AI] create specific helper to display impacts in UI

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ openai>=1.30.0
 mistralai>=1.0.0
 python-dotenv>=1.0.1
 pyright>=1.1.350
-ecologits>=0.8.2
 langchain>=1.0.5
 langchain-openai>=1.0.2
 langchain-mistralai>=1.0.1
+pandas>=2.2.0
+pydantic>=2.0.0
